--- a/app/src/main/res/layout/music_itemview.xml
+++ b/app/src/main/res/layout/music_itemview.xml
@@ -6,38 +6,39 @@
     android:paddingStart="@dimen/app_default_padding"
     android:paddingTop="@dimen/app_default_padding_half"
     android:paddingEnd="@dimen/app_default_padding"
-    android:paddingBottom="@dimen/app_default_padding_half"
     android:focusable="true"
     android:clickable="true"
     android:foreground="?android:attr/selectableItemBackground">
 
     <ImageView
         android:id="@+id/icon"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:scaleType="fitXY"
+        android:layout_width="50dp"
+        android:layout_height="50dp"
         android:layout_centerVertical="true" />
 
     <LinearLayout
         android:id="@+id/track_layout"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:minHeight="50dp"
         android:layout_toEndOf="@id/icon"
-        android:gravity="end"
+        android:paddingStart="@dimen/app_default_padding"
         android:orientation="vertical">
 
         <TextView
             android:id="@+id/track_name"
+            android:textStyle="bold"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_alignParentStart="true" />
+            android:layout_alignParentTop="true"
+            android:textSize="18sp"/>
 
         <TextView
             android:id="@+id/collection_artist_name"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginStart="@dimen/app_default_margin"
-            android:layout_toEndOf="@id/track_name"
-            android:gravity="end"
+            android:layout_alignParentBottom="true"
             android:textSize="14sp" />
     </LinearLayout>
 </RelativeLayout>
