change lottie json file

--- a/app/src/main/res/layout/main_fragment.xml
+++ b/app/src/main/res/layout/main_fragment.xml
@@ -13,7 +13,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_centerHorizontal="true"
-        app:lottie_fileName="loading_airplane.json"
+        app:lottie_fileName="9772-mondro-gaming.json"
         app:layout_constraintBottom_toTopOf="@+id/ctrl_bar"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -25,7 +25,7 @@
         android:layout_height="wrap_content"
         android:layout_centerHorizontal="true"
         android:visibility="invisible"
-        app:lottie_fileName="no_data.json"
+        app:lottie_fileName="9999-cant-find.json"
         app:layout_constraintBottom_toTopOf="@+id/ctrl_bar"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
